--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,7 @@ html, body{
   object-fit: cover;
   margin-left: 50px;
   margin-top: 10px;
+  margin-right: 120px;
 }
 
 .navbar ul{
@@ -214,8 +215,7 @@ video{
   font-size: 36px;
   font-family: 'Ruda', sans-serif;
   padding-bottom: 30px;
-  margin-left: 570px;
-  margin-right: 570px;
+  
 }
 .about_summary_content{
   display: flex;
@@ -732,9 +732,18 @@ video{
 
 .team_flex{
   display: flex;
-  margin: 150px;
-  margin-right: 100px;
-  margin-top: 60px;
+  /* margin: 150px; */
+  /* margin-right: 100px; */
+  /* margin-top: 60px; */
+  /* margin-top: 60px; */
+  /* margin-bottom: 150px; */
+  /* margin-left: 50px; */
+  /* margin-right: 50px; */
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  margin-bottom: 150px;
+  margin-left: 50px;
 }
 
 .team_flex img{
@@ -745,7 +754,8 @@ video{
 .robert, .art, .dharish, .mark{
   display: flex;
   flex-direction: column;
-  margin-right: 100px;
+  /* margin-right: 100px; */
+  margin-right: 70px;
 }
 .team_flex .name{
   padding-top: 10px;
@@ -1057,7 +1067,6 @@ textarea:focus, input:focus{
   font-family: 'Noto Serif', serif;
   font-family: 'Ruda', sans-serif;
   line-height: 1.5;
-  /* padding-right: 50px; */
   margin-bottom: 10px;
   margin-left: 100px;
 }
