--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@ body{
   z-index: 5;
 }
 
+
 .gpp_logo{
   /* width: 450px; */
   width: 65%;
@@ -216,7 +217,7 @@ video{
   gap: 0;
 }
 .about_summary h1{
-  margin-top: 150px;
+  margin-top: 100px;
   text-align: center;
   color:var(--website_main_theme);
   font-size: 36px;
@@ -285,15 +286,6 @@ video{
   opacity: 0.8;
 }
 
-.portfolio_underline{
-  margin: auto;
-  width: 90px;
-  height: 2px;
-  background-color:var(--website_main_theme);
-  text-align: center;
-  margin-bottom: 60px;
-}
-
 .portfolio_summary_content{
   padding-top: 50px;
   padding-bottom: 30px;
@@ -302,13 +294,14 @@ video{
   display: flex;
   flex-direction: column;
   background-color: #fff;
-  width: 1000px;
+  /* width: 1000px; */
+  width: 70%;
   align-items: center;
   margin: auto;
   margin-bottom: 50px;
 }
 .portfolio_summary_content img{
-  width: 880px;
+  width: 100%;
   height: 200px;
   object-fit: cover;
 }
@@ -323,6 +316,14 @@ video{
   font-size: 20px;
   text-align: justify;
   margin-bottom: 30px;
+}
+.portfolio_underline{
+  margin: auto;
+  width: 90px;
+  height: 2px;
+  background-color:var(--website_sec_theme);
+  text-align: center;
+  margin-bottom: 60px;
 }
 .portfolio_link, 
 .news_link
@@ -369,6 +370,7 @@ video{
 
 .news_summary{
   padding-top: 70px;
+ 
 }
 .news_summary_flex{
   display: flex;
@@ -392,6 +394,8 @@ video{
   gap: 2rem;
   border: 10px solid rgba(0,0,0 ,0.1);
   padding: 20px;
+  margin-left: 100px;
+  margin-right: 100px;
 }
 .news_post_flex{
   display: flex;
@@ -416,7 +420,9 @@ video{
 }
 .news_summary_content{
   background-color: #fff;
-  width: 400px;
+  /* width: 400px; */
+  width: 70%;
+
 }
 .news_summary_content a{
   display: inline-block;
@@ -610,12 +616,14 @@ video{
   margin-right: 70px;
 }
 .about_end_line{
-  background-color:var(--website_sec_theme);
-  height: 1.5px;
-  font-weight: 100;
-  margin-left: 330px;
-  margin-right: 340px;
+  margin: auto;
+  /* width: 600px; */
+  width: 60%;
+  height: 2px;
+  background-color: var(--website_sec_theme);
+  text-align: center;
   margin-bottom: 60px;
+  font-weight: 100;
   opacity: 0.5;
 }
 
@@ -835,13 +843,14 @@ video{
 }
 
 .team_end_line{
-  background-color:var(--website_sec_theme);
-  height: 1.5px;
-  font-weight: 100;
-  margin-top: -90px;
-  margin-left: 330px;
-  margin-right: 340px;
+  margin: auto;
+  /* width: 600px; */
+  width: 60%;
+  height: 2px;
+  background-color: var(--website_sec_theme);
+  text-align: center;
   margin-bottom: 60px;
+  font-weight: 100;
   opacity: 0.5;
 }
 
@@ -1086,13 +1095,15 @@ label::after{
 }
 
 .contact_end_line{
-  background-color:var(--website_sec_theme);
-  height: 1.5px;
+  margin: auto;
+  /* width: 600px; */
+  width: 60%;
+  height: 2px;
+  background-color: var(--website_sec_theme);
+  text-align: center;
+  margin-bottom: 60px;
+  margin-top: 50px;
   font-weight: 100;
-  margin-top: 80px;
-  margin-left: 330px;
-  margin-right: 340px;
-  margin-bottom: -60px;
   opacity: 0.5;
 }
 
@@ -1264,17 +1275,35 @@ label::after{
 }
 .pitch_deck_section .comp_email{
   color:var(--website_main_theme);
-  /* cursor: pointer; */
 }
 .pitch_deck_end_line{
-  background-color:var(--website_sec_theme);
-  height: 1.5px;
-  font-weight: 100;
+  margin: auto;
+  /* width: 600px; */
+  width: 60%;
+  height: 2px;
+  background-color: var(--website_sec_theme);
+  text-align: center;
   margin-top: 80px;
-  margin-left: 330px;
-  margin-right: 340px;
-  margin-bottom: -60px;
-  opacity: 0.5; 
+  margin-bottom: 10px;
+  font-weight: 100;
+  opacity: 0.5;
+}
+.pitch_link{
+  text-align: center;
+  text-transform: uppercase;
+  text-decoration: none;
+  color:#fff;
+  padding: 12px 30px 12px 25px;
+  background-color: var(--website_sec_theme);
+  /* background-color: var(--website_main_theme); */
+  font-family: 'Ruda', sans-serif; 
+  border-radius: 3px;
+  border-color: #999;
+  margin-left: 100px;
+}
+.pitch_link:hover{
+  background-color: #fff;
+  color:var(--website_sec_theme);
 }
 .not_found{
   display: flex;
@@ -1343,14 +1372,16 @@ label::after{
   font-weight: bold;
 }
 .privacy_end_line{
-  background-color:var(--website_sec_theme);
-  height: 1.5px;
-  font-weight: 100;
-  margin-left: 330px;
-  margin-right: 340px;
+  margin: auto;
+  /* width: 600px; */
+  width: 60%;
+  height: 2px;
+  background-color: var(--website_sec_theme);
+  text-align: center;
   margin-bottom: 20px;
-  margin-top: 50px;
-  opacity: 0.5; 
+  font-weight: 100;
+  opacity: 0.5;
+  margin-top: 60px;
 }
 .privacy_policy_notice{
   position: fixed;
