--- a/src/mobile.css
+++ b/src/mobile.css
@@ -19,7 +19,7 @@
       margin-right: 10px;
     }
     .gpp_logo{
-      width: 80%;
+      width: 85%;
       /* width: 300px; */
       margin-left: 0px;
       margin-right: 80px;
@@ -66,7 +66,9 @@
     }
     .home_content h1{
       margin-left: 30px;
-      font-size: 34px;
+      /* font-size: 34px; */
+      font-size: 28px;
+      margin-right: 10px;
       margin-bottom: 20px;
     }
     .home_content .other_description{
@@ -79,12 +81,13 @@
     .home_content .comp_name{
       margin-left: 30px;
       margin-bottom: 25px;
+      font-size: 22px;
     }
     .about_link{
-      font-size: 18px;
+      font-size: 16px;
       margin-left: 30px;
       padding-left: 30px;
-      width: 180px;
+      width: 170px;
     }
 
     .about_summary{
@@ -111,7 +114,7 @@
       height: 10%;
       display: block;
       margin: auto;
-      margin-top: 70px;
+      margin-top: 170px;
     }
     .about_underline, 
     .news_underline
