--- a/src/index.css
+++ b/src/index.css
@@ -589,12 +589,11 @@ video{
   height: 100%;
   text-align: center;
   transition: transform 1s ease-in-out;
-  -webkit-transition: transform 1s ease-in-out;
+  -webkit-transition: -webkit-transform 1s ease-in-out;
   transform-style: preserve-3d;
   -webkit-transform-style: preserve-3d;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   backface-visibility: hidden;
-  /* -moz-backface-visibility: hidden; */
   -webkit-backface-visibility: hidden;
 }
 
