--- a/src/mobile.css
+++ b/src/mobile.css
@@ -75,7 +75,7 @@
       margin-left: 30px;
       margin-bottom: 30px;
       margin-top: 5px;
-      margin-right: 0px;
+      margin-right: 10px;
       line-height: 1.6;
     }
     .home_content .comp_name{
@@ -88,6 +88,9 @@
       margin-left: 30px;
       padding-left: 30px;
       width: 170px;
+    }
+    video{
+      height: 130%;
     }
 
     .about_summary{
