--- a/src/mobile.css
+++ b/src/mobile.css
@@ -89,8 +89,11 @@
       padding-left: 30px;
       width: 170px;
     }
+    .home_section::before{
+      height: 115%;
+    }
     video{
-      height: 130%;
+      height: 115%;
     }
 
     .about_summary{
@@ -101,7 +104,7 @@
       display: block;
     }
     .about_summary h1{
-      margin-top: 50px;
+      margin-top: 90px;
       font-size: 28px;
     }
     .about_summary_content{
