--- a/src/index.css
+++ b/src/index.css
@@ -572,17 +572,16 @@ video{
   display: flex;
 }
 
-.flip-card {
-  background-color: transparent;
-  width: 600px;
+/* .flip-card { */
+  /* background-color: transparent; */
   /* width: 600px; */
-  height: 385px;
+  /* height: 385px; */
   /* height: 445px; */
-  perspective: 1000px;
-  text-align: justify;
-}
+  /* perspective: 1000px; */
+  /* text-align: justify; */
+/* } */
 
-.flip-card-inner {
+/* .flip-card-inner {
   position: relative;
   width: 100%;
   height: 100%;
@@ -619,10 +618,10 @@ video{
   justify-content: center;
   align-items: center;
 }
-.flip-card-front img{
+/* .flip-card-front img{
   margin-bottom: 30px;
-}
-.flip-card-back {
+} */
+/* .flip-card-back {
   background-color: var(--website_main_theme);
   color: #fff;
   transform: rotateY(180deg);
@@ -630,17 +629,70 @@ video{
   display: flex;
   justify-content: center;
   align-items: center;
+} */
+
+.flip-card {
+  background-color: transparent;
+  width: 600px;
+  height: 385px;
+  perspective: 1000px;
+  text-align: justify;
 }
+
+.flip-card-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s ease-in-out;
+  transform-style: preserve-3d;
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+}
+
+.flip-card:hover .flip-card-inner {
+  transform: rotateY(180deg);
+}
+
+.flip-card-front, .flip-card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.flip-card-front {
+  background-color: #fff;
+  color: black;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.flip-card-front img{
+  margin-bottom: 30px;
+} 
+
+.flip-card-back {
+  background-color: var(--website_main_theme);
+  color: white;
+  transform: rotateY(180deg);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+
 .flip-card-back p{
   font-size: 20px;
-  padding-left: 40px;
+  padding-left: 20px;
   padding-right: 20px;
   text-align: justify;
   line-height: 1.5;
   font-family: 'Noto Serif', serif;
   font-family: 'Ruda', sans-serif;
   color:#fff;
-}
+} 
 
 /* styling the content of the individual cards */
 
@@ -651,11 +703,7 @@ video{
 .card_2{
   margin-right: 70px;
 }
-.card_3{
-  padding-top: 50px;
-  padding-bottom: 50px;
-  margin-right: 70px;
-}
+
 .about_end_line{
   margin: auto;
   /* width: 600px; */
