--- a/src/mobile.css
+++ b/src/mobile.css
@@ -1,9 +1,18 @@
+
+
+/* styling for mobile devices */
+
 @media only screen and (max-width:500px){
-/* @media only screen and (max-width:800px){ */
+
+  /* storing commonly used colors */
+
     :root{
       --website_main_theme: rgb(121, 50, 56);
       --website_sec_theme: #9C4C56;
     }
+
+    /* fixing overlays on all the pages */
+
     .about_overlay h1, 
     .news_overlay h1, 
     .partners_overlay h1, 
@@ -14,7 +23,11 @@
       margin-left: 10px;
       margin-right: 10px;
     }
-    
+
+    /* styling the home page */
+
+    /* hamburger symbol */
+
     .hamburger{
       margin-right: 10px;
     }
@@ -24,6 +37,9 @@
       margin-left: 0px;
       margin-right: 80px;
     }
+
+    /* navbar for mobile devices */
+
     .mobile_navbar{
       text-align: center;
       margin-top: 150px;
@@ -49,6 +65,9 @@
     .mobile_menu_item:hover{
       opacity: 0.8;
     }
+
+    /* the link which user is on currently */
+
     .active-link{
       text-decoration: none;
       font-size: 20px;
@@ -64,6 +83,16 @@
     .active-link:hover{
       transform: scale(1.1);
     }
+    /* This class is not overiding the styling done earlier (line 31)
+      Instead, this is also styling the hamburger symbol but this class is present in 
+      the original styling of this npm package that is done by their developers and I have just changed it here
+      This class was originally present in the styling by default.  
+    */
+
+    .hamburger{
+      background-color: var(--website_main_theme);
+    }
+
     .home_content h1{
       margin-left: 30px;
       /* font-size: 34px; */
@@ -208,6 +237,8 @@
       font-size: 18px;
     }
 
+    /* about page styling */
+
     .about_page_flex{
       display: block;
     }
@@ -231,6 +262,7 @@
       margin-bottom: 50px;
     }
     
+    /* strategy page styling */
 
     .strategy_heading{
       margin-left: 30px;
@@ -272,6 +304,9 @@
     .strategy_underline{
       width: 70%;
     }
+
+    /* portfolio page styling */
+
     .portfolio_heading{
       margin-left: 30px;
       margin-right: 30px;
@@ -307,6 +342,8 @@
       margin-right: 20px;
       padding: 10px 20px;
     }
+
+    /* team page styling */
 
     .team_heading{
       line-height: 1.5;
@@ -346,6 +383,9 @@
       padding-left: 30px;
       padding-right: 0px;
     }
+
+    /* partners page styling */
+
     .partners_content{
       margin-left: 30px;
       margin-right: 30px;
@@ -377,6 +417,9 @@
     .partners_img_3 img{
       width: 100%;
     }
+
+    /* news page styling */
+
     .news_content{
       display: block;
       padding: 20px 30px;
@@ -385,11 +428,14 @@
       margin-top: 30px;
       margin-bottom: 40px;
     }
+
+    /* hiding the scroll to top button */
+
     .scroll_to_top{
       display: none;
     }
 
-
+    /* styling the contact page  */
 
     .contact_section_flex{
       display: block;
@@ -431,9 +477,10 @@
       padding-right: 30px;
       margin-right: 10px;
     }
-    .hamburger{
-      background-color: var(--website_main_theme);
-    }
+ 
+
+    /* styling the footer */
+
     .footer_section h1{
       margin-left: 0px;
     }
@@ -493,6 +540,9 @@
       justify-content: center;
       margin-bottom: 50px;
     }
+
+    /* styling the social media links */
+
     .linkedIn_icon{
       margin-left: 0px;
     }
@@ -535,6 +585,9 @@
       padding: 12px 20px 12px 20px;
       margin:auto;
     }
+
+    /* styling the pitch deck section */
+
     .pitch_deck_section{
       margin-bottom: 100px;
     }
@@ -549,6 +602,9 @@
       margin-right: 10px;
       font-size: 28px;
     }
+
+    /* styling the not found page */
+
     .not_found h1{
       font-size: 34px;
       margin-bottom: 30px;
@@ -562,6 +618,9 @@
       width: 200px;
       padding: 10px 20px;
     }
+
+    /* styling the privacy policy page */
+
     .privacy_policy_notice p{
       margin-left: 10px;
       margin-right: 20px;
